--- a/_config.yml
+++ b/_config.yml
@@ -14,3 +14,10 @@ highlighter: pygments
 permalink: pretty
 paginate: 5
 exclude: ["node_modules"]
+
+# Collection setting for statbook
+collections: 
+  statbook:
+    output: true
+
+# render: statbook
