update readme, site name, etc.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Anh Le's Personal Webpage
+title: Anh Le
 email: anh.le91@gmail.com
 description: "This is my personal web page. Included is my work and blog posts"
 baseurl: ""
