change email in config

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Anh Le
-email: anh.le91@gmail.com
+email: aql3@duke.edu
 description: "This is my personal web page. Included is my work and blog posts"
 baseurl: ""
 url: "http://ladilettante.github.io"
